# temporalmem

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
openspec/: config.yaml
openspec/changes/add-claude-code-source/: design.md  proposal.md  tasks.md
openspec/changes/add-claude-code-source/specs/claude-code-source/: spec.md
openspec/changes/add-claude-code-source/specs/ingestion/: spec.md
openspec/changes/add-inspector-ui/: proposal.md  tasks.md
openspec/changes/add-inspector-ui/specs/inspector-ui/: spec.md
openspec/changes/add-invalidation-ablation/: design.md  proposal.md  tasks.md
openspec/changes/add-invalidation-ablation/specs/evaluation/: spec.md
openspec/changes/add-invalidation-ablation/specs/knowledge-graph/: spec.md
openspec/changes/add-memory-core/: design.md  proposal.md  tasks.md
openspec/changes/add-schema-induction/: proposal.md
scripts/: download_data.py
src/temporalmem/: cli.py  config.py  embeddings.py  ingest.py  inspector.py
src/temporalmem/agent/: memory_agent.py
src/temporalmem/evaluation/: __init__.py  harness.py
src/temporalmem/extraction/: __init__.py  extractor.py  schemas.py
src/temporalmem/graph/: __init__.py  client.py  schema.py
src/temporalmem/retrieval/: __init__.py  fusion.py  hybrid.py
src/temporalmem/sources/: __init__.py  base.py  claudecode.py  longmemeval.py
tests/: test_agent_formatting.py  test_claudecode_source.py  test_cli_sources.py  test_fusion.py  test_ingest_utils.py  test_sampling.py  test_sources.py
(+6 files in other folders)
