[project]
name = "temporalmem"
version = "0.1.0"
description = "Local-first agentic memory on a temporal knowledge graph, evaluated on LongMemEval"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "neo4j>=5.25",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "huggingface-hub>=0.26",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
ui = [
    "streamlit>=1.40",
    "plotly>=5.24",
    "pandas>=2.2",
]

[project.scripts]
temporalmem = "temporalmem.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temporalmem"]

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
